--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 anyhow = "1.0.71"
 ic-cdk = "0.7.4"
 ic-web3 = "0.1.7"
+
+[dev-dependencies]
+tokio = { version = "1.28.2", features = ["macros", "rt"]}
