--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.71"
 ic-cdk = "0.7.4"
 ic-web3 = "0.1.7"
+ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }
 
 [dev-dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt"]}
