--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
-ic-cdk = "0.7.4"
+ic-cdk = "0.9.2"
 ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }
-ic-web3 = { git = "https://github.com/ivanlele/ic-web3", branch="dev" }
+ic-web3-rs = { git = "https://github.com/ivanlele/ic-web3-rs"}
 
 [dev-dependencies]
 tokio = { version = "1.28.2", features = ["macros", "rt"]}
